# a430sysid

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
configs/data/: pre_processing_config.yaml
configs/data/pre_processors/: combination_1.yaml
configs/sys_id/: config.yaml
configs/sys_id/env/: custom_a430gym.yaml
configs/sys_id/optimize/: optimize_config_for_custom_a430gym.yaml
configs/sys_id/optimize/log/: custom_a430gym.yaml
scripts/: README.md  identify_params.py  process_trajectory.py
src/a430sysid/algorithms/: optuna_minimize.py  optuna_minimize_list_version.py
src/a430sysid/data/: README.md
src/a430sysid/envs/: __init__.py  custom_a430_gym.py  custom_cartpole.py  custom_mountain_car_continuous.py  custom_pendulum.py
src/a430sysid/utils/: consts.py  euler_angle_utils.py  load_data.py  pandas_utils.py  path_utils.py
tests/data/: short_loop_6_20230227_120302.csv  short_straight_4_20230306_102637.csv  test_load_data.py
tests/data/pre_processor/: test_calc_p_q_r_pre_processor.py  test_calc_u_v_w_pre_processor.py  test_differential_pre_processor.py  test_interpolation_pre_processor.py  test_pre_processor_list.py  test_smoothing_pre_processor.py  test_unwrap_euler_angle_pre_processor.py  test_wrap_euler_angle_pre_processor.py
tests/data/row_filter/: test_default_value_filter.py  test_differential_correlation_filter.py  test_filter_list.py  test_in_range_filter.py
tests/data/utils/: test_euler_angle_utils.py
tests/envs/: test_a430py.py  test_custom_a430_gym.py  test_custom_cartpole.py  test_custom_mountain_car_continuous.py  test_custom_pendulum.py
tests/envs/a430_trace/: trace.csv  trace2.csv  trace3.csv
(+43 files in other folders)
